# thorfinn

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Makefile  OWASP.md  README.md  compose.yml  go.mod  go.sum  sqlc.yaml  sqlc.yml
cmd/: main.go
docker/: novus.dockerfile
internal/: db.go  env.go  error.go
internal/api/: aggregator.go  api.go
internal/database/: clyde_email_update_request.sql.go  clyde_passkey_credential.sql.go  clyde_password_reset_request.sql.go  clyde_security_key.sql.go  clyde_user.sql.go  clyde_user_totp_credential.sql.go  clyde_verification_email_request.sql.go  models.go  thorfinn_blacklisted_tokens.sql.go  thorfinn_otp_codes.sql.go  thorfinn_users.sql.go
internal/handlers/: auth.handler.go  ctx.go  index.go  user.handler.go  users.handler.go
internal/security/: codes.go  hashing.go  ratelimit.go  token-bucket.go
internal/utils/: db.go  env.go  http.go  json.go  scheduling.go  validation.go
migrations/: 0001_initial_tables.sql
orchestration/: compose.mysql.yml  compose.postgres.yml
protobufs/: types.proto
sdk-js/: package-lock.json  package.json  tsconfig.json
sdk-js/src/: dto.ts  index.ts
shared/go/: types.pb.go
shared/ts/: package.json  pnpm-lock.yaml  types.ts
shared/typescript/: types.ts
sql/migrations/: 001_initial.sql  001_novus_initial.sql  002_user_name_and_role.sql  003_email_verification_and_2fa_status.sql  (+1 more)
src/: dtos.rs  entities.rs  handlers.rs  main.rs  routes.rs
templates/: email_verification.html  password_reset_verification.html  two_factor_email_otp.html
(+20 files in other folders)
