[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
httpc-test = "0.1.10"
serde = "1.0.217"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["serde"] }
